--- a/src/app/utils/custom-dropdown/custom-dropdown.component.html
+++ b/src/app/utils/custom-dropdown/custom-dropdown.component.html
@@ -11,7 +11,7 @@
   <ul class="dropdown-menu" [class.show]="isDropdownOpen" aria-labelledby="dropdownMenuButton">
     <li> <input type="text" class="form-control" (keyup)="pressTxt()" name="item" [(ngModel)]="item" (keydown.enter)="enterFunc($event)"></li>
     <li *ngFor="let option of options">
-      <a class="dropdown-item" (click)="selectOption(option)" href="#">
+      <a class="dropdown-item" (click)="selectOption(option,$event)" href="#">
         {{ option.name?option.name:option.title }}
       </a>
     </li>
